--- a/app/styles/components/_typography.scss
+++ b/app/styles/components/_typography.scss
@@ -16,13 +16,13 @@ html{
   @media only screen and (min-width: $large-screen) {
     font-size: 15px;
   }
-  
-  font-family: "Roboto", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: normal;
   color: $off-black;
 }
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
+  font-family: 'Lato', sans-serif;
 }
 
 // Header Styles
