--- a/app/styles/components/_navbar.scss
+++ b/app/styles/components/_navbar.scss
@@ -6,8 +6,6 @@ nav {
   height: $navbar-height-mobile;
   line-height: $navbar-height-mobile;
 
-  a { color: #fff; }
-
   .nav-wrapper {
     position: relative;
     height: 100%;
@@ -73,14 +71,14 @@ nav {
       padding: 0;
 
       &:hover, &.active {
-        background-color: rgba(0,0,0,.1);
+      background-color: rgba(111, 111, 111, 0.1);
       }
     }
     a {
       font-size: 1rem;
       color: #fff;
       display: block;
-      padding: 0 15px;
+      padding: 1px 15px;
     }
 
     &.left {
