--- a/app/styles/components/_table_of_contents.scss
+++ b/app/styles/components/_table_of_contents.scss
@@ -18,6 +18,7 @@
     line-height: 1.5rem;
     letter-spacing: .4;
     display: inline-block;
+    text-transform: capitalize;
 
     &:hover {
       color: lighten(#757575, 20%);
