--- a/app/styles/components/_typography.scss
+++ b/app/styles/components/_typography.scss
@@ -16,7 +16,7 @@ html{
   @media only screen and (min-width: $large-screen) {
     font-size: 15px;
   }
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: normal;
   color: $off-black;
 }
@@ -35,8 +35,9 @@ h6 { font-size: $h6-fontsize; line-height: 1.1*$h6-fontsize; margin: ($h6-fontsi
 
 // Text Styles
 em { font-style: italic; }
-strong { font-weight: 500; }
+strong { font-weight: 600; }
 small { font-size: 75%; }
+.regular { font-weight: 400; }
 .light { font-weight: 300; }
 .thin { font-weight: 200; }
 
