--- a/app/styles/components/_typography.scss
+++ b/app/styles/components/_typography.scss
@@ -1,3 +1,6 @@
+$titles-font: 'Open Sans', sans-serif;
+$body-font: 'Lato', sans-serif;
+
 a {
   text-decoration: none;
 }
@@ -16,12 +19,12 @@ html{
   @media only screen and (min-width: $large-screen) {
     font-size: 15px;
   }
-  font-family: 'Open Sans', sans-serif;
+  font-family: $body-font;
   font-weight: normal;
   color: $off-black;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato', sans-serif;
+  font-family: $titles-font;
 }
 
 // Header Styles
