--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -25,9 +25,7 @@ anthonyjones is based on Underscores http://underscores.me/, (C) 2012-2015 Autom
 // import html5 boilerplate 
 @import '_h5bp';
 
-/*
- * import Font Awesome icons
- */
+// import Font Awesome icons
 @import 'font-awesome/font-awesome';
 
 
@@ -59,7 +57,35 @@ anthonyjones is based on Underscores http://underscores.me/, (C) 2012-2015 Autom
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400|Open+Sans:400,600);
+// @import url(http://fonts.googleapis.com/css?family=Lato:300,400|Open+Sans:400,600);
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url(app/fonts/open-sans/OpenSans-Regular.ttf);
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: url(app/fonts/open-sans/OpenSans-Bold.ttf);
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: url(app/fonts/lato/Lato-Regular.ttf);
+}
+
+@font-face {
+  font-family:t 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: url(app/fonts/lato/Lato-Light.ttf);
+}
 
 /*--------------------------------------------------------------
 # Elements
