remove search icon

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -150,7 +150,7 @@ padding:0;
 code,kbd,pre,tt {
 font-family:Consolas,'Liberation Mono',Courier,monospace;
 color:#444;
-background:#f8f8f8;
+background:#ffffff;
 -moz-border-radius:3px;
 -webkit-border-radius:3px;
 border-radius:3px;
