pages transitions, ajax changes, and general php changes

--- a/app/styles/components/_navbar.scss
+++ b/app/styles/components/_navbar.scss
@@ -71,7 +71,7 @@ nav {
       padding: 0;
 
       &:hover, &.active {
-      background-color: rgba(111, 111, 111, 0.1);
+      // background-color: rgba(111, 111, 111, 0.1);
       }
     }
     a {
