--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -14,7 +14,6 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
 anthonyjones is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
-
 */
 
 @charset "UTF-8";
@@ -28,8 +27,6 @@ anthonyjones is based on Underscores http://underscores.me/, (C) 2012-2015 Autom
 // import Font Awesome icons
 @import 'font-awesome/font-awesome';
 
-// import vendor css for plugins
-@import 'vendor/animsition.min.css';
 
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS: If you don't use Sass, just add styles here.
@@ -950,4 +947,7 @@ a.modal-trigger {
 }
 #home-logo:visited {
   color: #383838;
+}
+#menu-main-navigation {
+  text-transform: uppercase;
 }
