mobile display hide tags

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -651,8 +651,11 @@ span.badge.category {
     box-shadow: 0 0 1px rgba(0,0,0,.15);
   }
   #modal1 {
-  width: 90%;
-}
+    width: 90%;
+  }
+  .badges.inverse.right{
+    display:none;
+  }
 }
 @media only screen and (max-width: 993px) {
   .modal .modal-content {
