--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1018,7 +1018,9 @@ nav {
  * Based on dabblet (http://dabblet.com)
  * @author Lea Verou
  */
-
+pre {
+  border-radius: 3px;
+}
 code[class*="language-"],
 pre[class*="language-"] {
   color: black;
@@ -1069,7 +1071,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #f5f2f0;
+  background: #EDEDED;
 }
 
 /* Inline code */
