--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -612,7 +612,10 @@ clip: rect(-6px,185px,14px,25px);
   bottom: 64px;
 }
 .location {
-  padding: 15px 0px 0px 20px;
+  padding: 17px 0px 0px 20px;
+}
+.location a {
+  padding: 16px 10px 20px 0px;
 }
 .clear-icon {
   background-color: rgba(255, 255, 255, 0)!important;
