--- a/app/styles/components/_typography.scss
+++ b/app/styles/components/_typography.scss
@@ -1,5 +1,9 @@
-$title-font: 'Lato', sans-serif;
-$body-font: 'Open Sans', sans-serif;
+$title-font: 'Roboto', sans-serif;
+$body-font: 'Roboto', sans-serif;
+
+// 'Roboto', sans-serif;
+// 'Lato', sans-serif;
+// 'Open Sans', sans-serif;
 
 a {
   color: #099DB0;
