--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -54,9 +54,9 @@ anthonyjones is based on Underscores http://underscores.me/, (C) 2012-2015 Autom
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
-// @import url(http://fonts.googleapis.com/css?family=Lato:300,400|Open+Sans:400,600);
+ /* 
 
-@font-face {
+ @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
@@ -82,7 +82,7 @@ anthonyjones is based on Underscores http://underscores.me/, (C) 2012-2015 Autom
   font-style: normal;
   font-weight: 300;
   src: url(app/fonts/lato/Lato-Light.ttf);
-}
+} */
 
 /*--------------------------------------------------------------
 # Elements
@@ -209,7 +209,8 @@ a.sharer:hover {
 }
 .uva-blue {
   background: rgba(255,255,255,0.97);
-  box-shadow: 0 0 1px rgba(0,0,0,0.15);
+  //box-shadow: 0 0 1px rgba(0,0,0,0.15);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.03),0 2px 10px 0 rgba(0, 0, 0, 0.03);
 }
 .progress {
   margin: 0px 0px -2px 0px;
@@ -282,25 +283,24 @@ div.legal a {
   bottom: 0;
   color: #383838;
   line-height: 35px;
-  font-weight: 500;
-  //font-family: "Brandon-Grotesque";
-  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
 }
 footer {
   position: fixed;
   bottom: 0;
   z-index:999999;
   width:100%;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
+  // box-shadow: 0 0 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2),0 2px 10px 0 rgba(0, 0, 0, 0.05);
   height:55px;
 }
 nav ul a {
   color: grey;
-  font-size: 13px;
+  font-weight: 300;
 }
 nav ul a:hover {
   color: #383838;
-  font-size: 13px;
 }
 nav ul a:visited {
   
@@ -354,18 +354,24 @@ nav a.button-collapse {
   width: 5px;
   height: 0;
 }
-.next-article {
+/* .next-article {
   padding: 17px 0px 17px 17px;
   border-left: solid 1px rgba(0,0,0,0.05);
   text-transform: uppercase;
   display: inline-block;
   background: #099DB0;
+} */
+.next-article {
+  padding: 10px 16px 9px 17px;
+  border-left: solid 1px rgba(0,0,0,.05);
+  text-transform: uppercase;
+  display: inline-block;
 }
-.next-article a.modal-trigger {
+/* .next-article a.modal-trigger {
   padding: 17px 15px 15px 20px;
   margin-left: -15px;
   //margin-right: -12px;
-}
+} */
 
 #loadingbar.waiting dd, #loadingbar.waiting dt {
   -moz-animation: pulse 2s ease-out 0s infinite;
@@ -859,7 +865,7 @@ aside {
   max-width: 150px;
 }
 .top-article a {
-  border-left: solid 2px rgba(0,0,0,.05);
+  border-left: solid 1px rgba(0,0,0,.05);
   padding: 17px 20px;
   //margin-right: -20px;
 }
@@ -980,7 +986,7 @@ a.modal-trigger {
   color: #383838;
 }
 #menu-main-navigation {
-  text-transform: uppercase;
+  // text-transform: uppercase;
 }
 nav {
   box-shadow: none;
@@ -1185,16 +1191,129 @@ pre.line-numbers > code {
 
 }
 
-  .line-numbers-rows > span {
-    pointer-events: none;
-    display: block;
-    counter-increment: linenumber;
+.line-numbers-rows > span {
+  pointer-events: none;
+  display: block;
+  counter-increment: linenumber;
+}
+
+.line-numbers-rows > span:before {
+  content: counter(linenumber);
+  color: #999;
+  display: block;
+  padding-right: 0.8em;
+  text-align: right;
+}
+.mouse-middle {
+  position: absolute;
+  margin: auto;
+  padding-top: 45px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+}
+span.unu, span.doi, span.trei {
+  display: block;
+  width: 7px;
+  height: 7px;
+  -ms-transform: rotate(45deg); /* IE 9 */
+  -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+  transform: rotate(45deg);
+  border-right: 2px solid #383838;
+  border-bottom: 2px solid #383838;
+  margin: 0 0 2px 6px;
+}
+.unu {
+  margin-top: 4px;
+}
+
+.unu, .doi, .trei {
+  -webkit-animation: mouse-scroll 1s infinite;
+  -moz-animation: mouse-scroll 1s infinite;
+}
+
+.unu {
+  -webkit-animation-delay: .1s;
+  -moz-animation-delay: .1s;
+  -webkit-animation-direction: alternate;
+}
+
+.doi {
+  -webkit-animation-delay: .2s;
+  -moz-animation-delay: .2s;
+  -webkit-animation-direction: alternate;
+}
+
+.trei {
+  -webkit-animation-delay: .3s;
+  -moz-animation-delay: .3s;
+  -webkit-animation-direction: alternate;
+}
+.mouse {
+  height: 30px;
+  width: 20px;
+  border-radius: 10px;
+  transform: none;
+  border: 2px solid #383838;
+}
+.wheel {
+  height: 5px;
+  width: 2px;
+  display: block;
+  margin: 5px auto;
+  background: #383838;
+  position: relative;
+}
+
+.wheel {
+  -webkit-animation: mouse-wheel 1.2s ease infinite;
+  -moz-animation: mouse-wheel 1.2s ease infinite;
+}
+
+@-webkit-keyframes mouse-wheel
+{
+   0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
   }
 
-    .line-numbers-rows > span:before {
-      content: counter(linenumber);
-      color: #999;
-      display: block;
-      padding-right: 0.8em;
-      text-align: right;
-    }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(6px);
+    -ms-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+}
+
+@-moz-keyframes mouse-wheel
+{
+  0% { top: 1px; }
+  50% { top: 2px; }
+  100% { top: 3px;}
+}
+
+@-webkit-keyframes mouse-scroll {
+
+  0%   { opacity: 0;}
+  50%  { opacity: .5;}
+  100% { opacity: 1;}
+}
+@-moz-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@-o-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
