--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -866,8 +866,7 @@ aside {
 }
 .top-article a {
   border-left: solid 1px rgba(0,0,0,.05);
-  padding: 17px 20px;
-  //margin-right: -20px;
+  padding: 19px 20px;
 }
 .top-article {
   padding: 17px 0px;
@@ -1316,4 +1315,7 @@ span.unu, span.doi, span.trei {
   0%   { opacity: 0; }
   50%  { opacity: .5; }
   100% { opacity: 1; }
+}
+.articles {
+  background-color: #099DB0;
 }
