--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -997,7 +997,7 @@ nav {
   padding: 50px 0px;
 }
 .card .card-content {
-  height: 200px;
+  height: 170px;
 }
 .card-left-right {
   padding: 0px 25px;
@@ -1318,4 +1318,7 @@ span.unu, span.doi, span.trei {
 }
 .articles {
   background-color: #099DB0;
+}
+.title-padding {
+  padding: 0 10% 0 10%;
 }
